--- a/src/assets/stylesheets/spoke.scss
+++ b/src/assets/stylesheets/spoke.scss
@@ -30,7 +30,13 @@ body {
 :local(.content) {
   display: flex;
   flex-direction: column;
-  height: calc(100vh);
+  height: 80vh;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 970px;
+  margin: 0 auto;
 }
 
 :local(.header) {
@@ -56,12 +62,9 @@ body {
 
 :local(.hero-pane) {
   display: flex;
-  height: 100%;
-  position: relative;
-
-  @media(max-width: $breakpoint) {
-    flex-direction: column;
-  }
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 :local(.spoke-logo) {
@@ -105,7 +108,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 
   @media(max-width: $breakpoint) {
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 1.0);
@@ -122,17 +124,8 @@ body {
   align-items: flex-end;
   justify-content: center;
   position: relative;
-  margin-left: 32px;
+  margin: 64px 32px;
   flex: 1;
-
-  @media(max-width: $breakpoint) {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0px
-  }
 }
 
 :local(.preview-video) {
@@ -141,30 +134,15 @@ body {
   left: 0;
   position: absolute;
 
-  border-radius: 12px 0 0 12px;
-
-  // TODO match to real video
-  @media(max-width: 1280px) {
-    opacity: 0.3;
-    border-radius: 12px;
-  }
-
-  z-index: -1;
+  border-radius: 12px;
 }
 
 :local(.download-button) {
   @extend %action-button;
   @extend %wide-button;
   background-color: $spoke-action-color;
+  padding: 0;
   margin-top: 64px;
-}
-
-:local(.play-button) {
-  @extend %action-button;
-  background-color: $darker-grey;
-  margin: auto;
-  margin-top: 64px;
-  padding: 0px 82px;
 }
 
 :local(.browse-versions) {
